<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/light_purple"
    tools:context=".views.fragments.GeographyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belong"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/flags"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/quiz_image"
            android:src="@drawable/croatia"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/progressPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/gray"
                tools:text= "0/10"/>
        </LinearLayout>

        <TextView
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/default_option"
            android:padding="15dp"
            android:text="@string/option"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/default_option"
            android:padding="15dp"
            android:text="@string/option"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/default_option"
            android:padding="15dp"
            android:text="@string/option"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/default_option"
            android:padding="15dp"
            android:text="@string/option"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/btn_purple_rounded"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>